# bruno

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crates/bruno-ai/: Cargo.toml
crates/bruno-ai/examples/: agent_smoke.rs  smoke.rs  vision_smoke.rs
crates/bruno-ai/src/: client.rs  config.rs  error.rs  lib.rs  message.rs
crates/bruno-ai/src/agent/: embed.rs  memory.rs  mod.rs
crates/bruno-ai/src/provider/: azure.rs  claude.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  sse.rs
crates/bruno-app/: Cargo.toml  Info.plist  build.rs
crates/bruno-app/src/: browser.rs  calendar.rs  commands.rs  main.rs  nudge.rs  orb_config.rs  orb_window.rs  wiring.rs
crates/bruno-app/src/hud/: mod.rs  state.rs
crates/bruno-app/src/hud/assets/: hud.html  mod.rs
crates/bruno-app/src/platform/: macos.rs  mod.rs
crates/bruno-core/: Cargo.toml
crates/bruno-core/src/: bus.rs  events.rs  intent.rs  lib.rs  mood.rs  startup.rs
crates/bruno-daemon/: Cargo.toml
crates/bruno-daemon/src/: capture.rs  capture_loop.rs  classify.rs  idle.rs  lib.rs  main.rs  relevance.rs  window.rs
crates/bruno-orb/: Cargo.toml
crates/bruno-orb/examples/app/: config.rs  main.rs
crates/bruno-orb/examples/app/platform/: macos.rs  mod.rs
crates/bruno-orb/src/: lib.rs  mood.rs
crates/bruno-orb/src/renderer/: mod.rs  pipeline.rs  state.rs  uniforms.rs
crates/bruno-orb/src/renderer/shaders/: orb.wgsl
crates/bruno-voice/: Cargo.toml  build.rs
crates/bruno-voice/examples/: piper_smoke.rs  whisper_smoke.rs
crates/bruno-voice/src/: config.rs  intent.rs  lib.rs  permissions.rs  piper.rs  stt.rs  tts.rs  whisper.rs
crates/bruno-voice/src/speaker/: embed.rs  mod.rs  pcm.rs  profile.rs
