[package]
name = "bruno-ai"
version = "0.1.0"
edition = "2024"
description = "Bruno AI/agent layer: multi-provider LLM inference (Ollama, OpenAI, Claude, Azure Foundry)"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
base64 = "0.22"
