[package]
name = "bruno-app"
version = "0.1.0"
edition = "2024"
description = "Bruno desktop companion app"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "bruno"
path = "src/main.rs"

[features]
# Piper neural TTS is on by default. Build with `--no-default-features` to drop
# it (and the libpiper link requirement). Needs PIPER_DIR set — see .cargo/config.toml.
default = ["piper"]
piper = ["bruno-voice/piper"]

[dependencies]
bruno-core = { path = "../bruno-core" }
bruno-ai = { path = "../bruno-ai" }
bruno-daemon = { path = "../bruno-daemon" }
bruno-voice = { path = "../bruno-voice" }
bruno-orb = { path = "../bruno-orb" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
winit = "0.30"
global-hotkey = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSWindow",
    "NSTextField",
    "NSColor",
    "NSFont",
    "NSGraphics",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
raw-window-handle = "0.6"
core-graphics = "0.24"
