[package]
name = "bruno-daemon"
version = "0.1.0"
edition = "2024"
description = "Bruno screen vision and activity sensing"
license = "MIT"

[lib]
name = "bruno_daemon"
path = "src/lib.rs"

[[bin]]
name = "bruno-daemon"
path = "src/main.rs"

[dependencies]
bruno-core = { path = "../bruno-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
image = "0.25"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSLocale"] }
objc2-core-graphics = { version = "0.3", features = [
    "CGEventTypes",
    "CGImage",
    "CGBitmapContext",
    "CGColorSpace",
    "CGContext",
] }
objc2-core-foundation = "0.3"
objc2-screen-capture-kit = { version = "0.3", features = [
    "SCScreenshotManager",
    "SCShareableContent",
    "SCStream",
    "block2",
    "objc2-core-graphics",
] }
block2 = "0.6"
core-graphics = "0.24"
core-foundation = "0.10"
