[package]
name = "bruno-voice"
version = "0.1.0"
edition = "2024"
description = "Bruno macOS STT and TTS"
license = "GPL-3.0-or-later"
build = "build.rs"

[lib]
name = "bruno_voice"
path = "src/lib.rs"

[features]
# Piper neural TTS via libpiper (GPL-3.0). Requires a built libpiper install and
# PIPER_DIR set at build time. See src/piper.rs.
piper = ["dep:hound"]

[dependencies]
bruno-core = { path = "../bruno-core" }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tracing = "0.1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["blocking"] }
hound = { version = "3", optional = true }

[dev-dependencies]
hound = "3"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14", features = ["metal"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSLocale", "NSError"] }
objc2-avf-audio = { version = "0.3", features = [
    "AVSpeechSynthesis",
    "AVAudioEngine",
    "AVAudioSession",
    "AVAudioSessionTypes",
    "AVAudioApplication",
    "AVAudioBuffer",
] }
objc2-speech = { version = "0.3", features = [
    "SFSpeechRecognizer",
    "SFSpeechRecognitionRequest",
    "SFSpeechRecognitionResult",
    "SFSpeechRecognitionTask",
    "block2",
] }
block2 = "0.6"
core-foundation = "0.10"
